2003-05-27  Jean Delvare  <khali@linux-fr.org>

	Updated to support Intel AP-485 specification (CPUID) revision 023
	(was 021).

	* dmidecode.c: Added SBF flag to processor ID (DMI case 4). Added comment
	about new flags returned in ECX.

2003-05-26  Jean Delvare  <khali@linux-fr.org>

	Updated to support SMBIOS specification version 2.3.4 (was 2.3.3).

	* dmidecode.c: Added processor and processor upgrade names (DMI case 4).
	* dmidecode.c: Added slot names (DMI case 9).

2003-05-22  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fixed typo reported by David Wilson (DMI case 6).

2003-03-08  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Decoded more fields according to the IPMI specification
	(DMI case 38).

2003-03-07  Jean Delvare  <khali@linux-fr.org>

	Fixed IPMI device information (DMI case 38). Thanks to Richard Sharpe
	for pointing the bugs out.

	* dmidecode.c: Fixed IPMI interface type being shifted by one.
	* dmidecode.c: Fixed NV storage device being improperly displayed.
	* dmidecode.c: Reworded IPMI specification revision into specification
	version, as suggested in the IPMI specification itself.
	* dmidecode.c: Added a reference to the IPMI specification.
	* dmidecode.c: Show I2C address as hexadecimal.
	* dmidecode.c: Base address is a QWORD, not DWORD.
	* dmidecode.c: Decoded some extra fields according to the IPMI
	specification.

2003-03-06  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c, biosdecode.c: Moved all changelog entries to CHANGELOG.
	* CHANGELOG: New. Format inspired by Heroes' ChangeLog file.
	* dmidecode.c, biosdecode.c, Makefile: Updated copyright years.
	* dmidecode.c, biosdecode.c, Makefile: Moved version definition to
	version.h. Updated dependencies accordingly.
	* version.h: New.

2002-10-21  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Changed supported log type descriptors display.
	* dmidecode.c: Code optimization in event log status.
	* dmidecode.c: Remove extra newline in voltage probe accuracy.